# DocuChat

./: .env  .env.example  .gitignore  README.md  main.py  pyproject.toml
documents/docs/: Maheswaran_Vetrivel_Presentation.pptx
scripts/: generate_dashboard.py  run_compare.py  run_eval.py  run_queries.py  sample_gold_dataset.jsonl  test_graph_connection.py
src/: config.py  main.py  models.py
src/embedding/: base.py  factory.py  local_sentence_transformers.py
src/eval/: logger.py
src/eval/metrics/: abstention_accuracy.py  answer_correctness.py  citation_precision.py  common.py  graph_contribution_rate.py  multihop_recall_at_k.py  recall_at_k.py  schema.py  source_mapping.py  unsupported_claim_rate.py
src/graph/: __init__.py  artifacts.py  base.py  builder.py  chunk_source.py  factory.py  llm_adapter.py  models.py  normalize.py  types.py
src/graph/providers/: __init__.py  neo4j_graph.py
src/indexing/: faiss_index.py
src/ingestion/: hashing.py  registry.py
src/llm/: client.py  factory.py  openai_client.py  stub_client.py
src/pipeline/: job_store.py  runner.py  stages.py
src/processing/: chunk.py  clean.py  embed.py  extract_docx.py  extract_pdf.py
src/prompts/: grounded_prompt.py
src/retrieval/: active_index.py  embedder_id.py  graph_retriever.py  hybrid_retriever.py  query_embedder.py  reranker.py  types.py  vector_retriever.py
src/routes/: collections.py  eval.py  health.py  jobs.py  pages.py  panel.py  query.py  uploads.py
src/services/: query_service.py
src/utils/: atomic_io.py  embed_bench.py  embed_cache.py  fs.py
static/css/: eval_dashboard.css  style.css
static/js/: eval_dashboard.js  script.js
templates/: eval_dashboard.html  index.html
