    [project]
    name = "docuchat"
    version = "0.1.0"
    description = "Hybrid Vector-Graph RAG system with evidence grounding and hallucination control"
    readme = "README.md"
    requires-python = ">=3.13"
    dependencies = [
        "dotenv>=0.9.9",
        "faiss-cpu>=1.13.2",
        "fastapi>=0.129.0",
        "jinja2>=3.1.6",
        "neo4j>=6.1.0",
        "neo4j-graphrag[openai]>=1.13.1",
        "numpy>=2.4.2",
        "pdfplumber>=0.11.9",
        "pillow>=12.1.1",
        "pix2text>=1.1.6",
        "pydantic>=2.12.5",
        "pymupdf>=1.27.1",
        "pytesseract>=0.3.13",
        "python-docx>=1.2.0",
        "python-multipart>=0.0.22",
        "sentence-transformers>=5.2.2",
        "starlette==0.46.2",
        "uvicorn>=0.40.0",
]
